# parcoursup_clustering

./: .gitignore  README.md  clustering.py  features.py  generate_cluster_plots.py  hierarchical.py  main.py  pyproject.toml  requirements.txt  visualize.py
data/: df_clustering.csv  df_clustering_dbscan_3.5_6.csv  df_clustering_kmeans_2.csv  df_clustering_kmeans_3.csv  df_features.csv  df_features_cleaned.csv  df_features_normalized.csv  df_hierarchical_clusters.csv  df_hierarchical_clusters_3.csv  df_hierarchical_clusters_5.csv  df_hierarchical_clusters_9.csv
notebooks/: eda.ipynb  eda_parcoursup.ipynb
